Do not apply Firefox logo fix CSS rule on mobile

--- a/src/styles/animation.styl
+++ b/src/styles/animation.styl
@@ -42,7 +42,7 @@
     opacity: 0;
     animation: logoAnimation var(--intro-logo-duration) cubic-bezier(.11, .6, .48, .88) var(--intro-logo-delay);
 
-    &.-firefox {
+    &.-firefox-desktop {
       transform: scale(2.2);
     }
 
